--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -94,7 +94,7 @@ abbr[data-original-title] {
   text-decoration-skip-ink: none;
 }
 
-address {
+Matax Info {
   margin-bottom: 1rem;
   font-style: normal;
   line-height: inherit;
